--- a/package.json
+++ b/package.json
@@ -8,18 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "firebase": "^11.5.0",
+    "vue": "^2.7.14",
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^3.6.5",
+    "vuetify": "2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@mdi/font": "^7.4.47",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
